vpc.tf
resource "aws_vpc" "terraform_vpc" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"

  tags {
    "Name" = "${var.default_vpc_name}"
  }
}

resource "aws_default_route_table" "default" {
  default_route_table_id = "${aws_vpc.terraform_vpc.default_route_table_id}"

  tags {
    Name = "${var.default_vpc_name}_default_route_table"
  }
}

resource "aws_subnet" "public1" {
  vpc_id                  = "${aws_vpc.terraform_vpc.id}"
  cidr_block              = "10.10.1.0/24"
  map_public_ip_on_launch = false
  availability_zone       = "${data.aws_availability_zones.available.names[0]}"

  tags = {
    Name = "${var.default_vpc_name}_public_subnet_az1"
  }
}

resource "aws_subnet" "public2" {
  vpc_id                  = "${aws_vpc.terraform_vpc.id}"
  cidr_block              = "10.10.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "${data.aws_availability_zones.available.names[1]}"

  tags = {
    Name = "${var.default_vpc_name}_public_subnet_az2"
  }
}

resource "aws_subnet" "private1" {
  vpc_id            = "${aws_vpc.terraform_vpc.id}"
  cidr_block        = "10.10.10.0/24"
  availability_zone = "${data.aws_availability_zones.available.names[0]}"

  tags = {
    Name = "${var.default_vpc_name}_private_subnet_az1"
  }
}

resource "aws_subnet" "private2" {
  vpc_id            = "${aws_vpc.terraform_vpc.id}"
  cidr_block        = "10.10.11.0/24"
  availability_zone = "${data.aws_availability_zones.available.names[1]}"

  tags = {
    Name = "${var.default_vpc_name}_private_subnet_az2"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.terraform_vpc.id}"

  tags {
    Name = "${var.default_vpc_name}_igw"
  }
}

resource "aws_route" "internet_access" {
  route_table_id         = "${aws_vpc.terraform_vpc.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.igw.id}"
}

resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = ["aws_internet_gateway.igw"]
}

resource "aws_nat_gateway" "nat" {
  allocation_id = "${aws_eip.nat_eip.id}"
  subnet_id     = "${aws_subnet.public1.id}"
  depends_on    = ["aws_internet_gateway.igw"]
}

resource "aws_route_table" "private_route_table" {
  vpc_id = "${aws_vpc.terraform_vpc.id}"

  tags {
    Name = "${var.default_vpc_name}_private_route_table"
  }
}

resource "aws_route" "private_route" {
  route_table_id         = "${aws_route_table.private_route_table.id}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${aws_nat_gateway.nat.id}"
}

resource "aws_route_table_association" "public_subnet1_association" {
  subnet_id      = "${aws_subnet.public1.id}"
  route_table_id = "${aws_vpc.terraform_vpc.main_route_table_id}"
}

resource "aws_route_table_association" "public_subnet2_association" {
  subnet_id      = "${aws_subnet.public2.id}"
  route_table_id = "${aws_vpc.terraform_vpc.main_route_table_id}"
}

resource "aws_route_table_association" "private_subnet1_association" {
  subnet_id      = "${aws_subnet.private1.id}"
  route_table_id = "${aws_route_table.private_route_table.id}"
}

resource "aws_route_table_association" "private_subnet2_association" {
  subnet_id      = "${aws_subnet.private2.id}"
  route_table_id = "${aws_route_table.private_route_table.id}"
}

resource "aws_default_security_group" "default" {
  vpc_id = "${aws_vpc.terraform_vpc.id}"

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "${var.default_vpc_name}_default_security_group"
  }
}

resource "aws_default_network_acl" "default" {
  default_network_acl_id = "${aws_vpc.terraform_vpc.default_network_acl_id}"

  ingress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags {
    Name = "${var.default_vpc_name}_default_acl"
  }
}

resource "aws_network_acl" "public" {
  vpc_id = "${aws_vpc.terraform_vpc.id}"

  subnet_ids = [
    "${aws_subnet.public1.id}",
    "${aws_subnet.public2.id}",
  ]

  tags {
    Name = "${var.default_vpc_name}_public_acl"
  }
}

resource "aws_network_acl" "private" {
  vpc_id = "${aws_vpc.terraform_vpc.id}"

  subnet_ids = [
    "${aws_subnet.private1.id}",
    "${aws_subnet.private2.id}",
  ]

  tags {
    Name = "${var.default_vpc_name}_private_acl"
  }
}

resource "aws_network_acl_rule" "public_ingress80" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 100
  rule_action    = "allow"
  egress         = false
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 80
  to_port        = 80
}

resource "aws_network_acl_rule" "public_egress80" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 100
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 80
  to_port        = 80
}

resource "aws_network_acl_rule" "public_ingress443" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 110
  rule_action    = "allow"
  egress         = false
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 443
  to_port        = 443
}

resource "aws_network_acl_rule" "public_egress443" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 110
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 443
  to_port        = 443
}

resource "aws_network_acl_rule" "public_ingress22" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 120
  rule_action    = "allow"
  egress         = false
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 22
  to_port        = 22
}

resource "aws_network_acl_rule" "public_egress22" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 120
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "${aws_vpc.terraform_vpc.cidr_block}"
  from_port      = 22
  to_port        = 22
}

resource "aws_network_acl_rule" "public_ingress_ephemeral" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 140
  rule_action    = "allow"
  egress         = false
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 1024
  to_port        = 65535
}

resource "aws_network_acl_rule" "public_egress_ephemeral" {
  network_acl_id = "${aws_network_acl.public.id}"
  rule_number    = 140
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 1024
  to_port        = 65535
}

resource "aws_network_acl_rule" "private_ingress_vpc" {
  network_acl_id = "${aws_network_acl.private.id}"
  rule_number    = 100
  rule_action    = "allow"
  egress         = false
  protocol       = -1
  cidr_block     = "${aws_vpc.terraform_vpc.cidr_block}"
  from_port      = 0
  to_port        = 0
}

resource "aws_network_acl_rule" "private_egress_vpc" {
  network_acl_id = "${aws_network_acl.private.id}"
  rule_number    = 100
  rule_action    = "allow"
  egress         = true
  protocol       = -1
  cidr_block     = "${aws_vpc.terraform_vpc.cidr_block}"
  from_port      = 0
  to_port        = 0
}

resource "aws_network_acl_rule" "private_ingress_nat" {
  network_acl_id = "${aws_network_acl.private.id}"
  rule_number    = 110
  rule_action    = "allow"
  egress         = false
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 1024
  to_port        = 65535
}

resource "aws_network_acl_rule" "private_egress80" {
  network_acl_id = "${aws_network_acl.private.id}"
  rule_number    = 120
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 80
  to_port        = 80
}

resource "aws_network_acl_rule" "private_egress443" {
  network_acl_id = "${aws_network_acl.private.id}"
  rule_number    = 130
  rule_action    = "allow"
  egress         = true
  protocol       = "tcp"
  cidr_block     = "0.0.0.0/0"
  from_port      = 443
  to_port        = 443
}
